# agent-sandbox

./: .env.example  .gitignore  AGENTS.md  BUGFIX.md  DECISIONS.md  OPTIMIZATION.md  PROJECT.md  README.md  dev.sh  pyproject.toml  task_plan.md
.github/: CLAUDE.md
.scream-code/: ARCHITECTURE.md  COLLAB-MODES.md  NEXT_STEPS.md  TEST_PLAN_knowledge.md  core-goal.md  handoff-next-session.md  memory-consolidation-plan.md  military-skill-improvement.md  optimization-report-2026-06-22.md  prompt-to-opus-review.md  shared-cli-config-proposal.md  trae-integration-assessment.md
.sdd/: checker_round1_20260617T093949.json  checker_round1_20260617T112706.json  checker_round1_20260617T113135.json  checker_round1_20260617T113330.json  checker_round1_20260617T113800.json  checker_round1_20260617T115607.json  checker_round1_20260617T115818.json  checker_round1_20260617T115843.json  checker_round2_20260617T111530.json  checker_round2_20260617T112725.json  checker_round2_20260617T113211.json  checker_round2_20260617T113334.json  checker_round2_20260617T113803.json  checker_round2_20260617T115612.json  checker_round2_20260617T115846.json  checker_round3_20260617T112427.json  checker_round3_20260617T112726.json  checker_round3_20260617T113214.json  checker_round3_20260617T113815.json  checker_round3_20260617T115848.json  checker_round4_20260617T113221.json  checker_round4_20260617T115854.json  checker_round5_20260617T115900.json  loop_result_20260617T093949.json  loop_result_20260617T112726.json  loop_result_20260617T113221.json  loop_result_20260617T113334.json  (+27 more)
align/: align.py  (+1 more)
(+136 files in other folders)
