[project]
name = "agent-sandbox"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "python-dotenv",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
    "websocket-client>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx<1"]
